# Obsidian-Notes-Manager

./: .gitignore  README.md
notes_manager/: Cargo.toml
notes_manager/config/: config.json
notes_manager/src/: main.rs
notes_manager/src/helpers/: mod.rs
notes_manager/src/lab/: mod.rs
notes_manager/src/machine/: mod.rs
notes_manager/src/notes/: mod.rs
