[package]
name = "notes_manager"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.96"
serde = { version = "1.0.104", features = ["derive"] }
clap = { version = "4.3.0", features = ["derive"] }
